[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-rapyd-wiretap"
dynamic = ["version"]
description = "A Django application that logs requests and responses to your project for auditing or troubleshooting purposes."
readme = "readme.md"
license = "Apache-2.0"
authors = [
    { name = "Karthic Raghupathi", email = "karthicr@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["Django>=4.2,<5.3"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "bump-my-version",
    "tox>=4",
    "tox-uv",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/karthicraghupathi/django_rapyd_wiretap"
Repository = "https://github.com/karthicraghupathi/django_rapyd_wiretap"
Issues = "https://github.com/karthicraghupathi/django_rapyd_wiretap/issues"

[tool.hatch.version]
path = "wiretap/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["wiretap"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
