[metadata]
name = django-rapyd-wiretap
version = 0.0.5
description = A Django application that logs requests and responses to your project for auditing or troubleshooting purposes.
long_description = file:readme.md
author="Karthic Raghupathi",
author_email="karthicr@gmail.com",
url = https://github.com/karthicraghupathi/django_rapyd_wiretap
license = Apache Software License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3,<3.3
